--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <main>
     <div class="container mt-5 py-5">
         <div class="p-4 rounded bg-body-secondary">
-            <h1 class="display-5 fst-italic">Welcome to Sample Site</h1>
+            <h1 class="display-5">Welcome to Sample Site</h1>
             <p class="lead mt-5">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
             <p class="lead">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
             <p class="lead">さらに詳しく</a></p>        
